--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
 
     <!--- Jumbotron -->
-    <div class="container-fludi">
+    <div class="container-fluid">
         <div class="row jumbotron">
             <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
                 <p class="lead">
